--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
-    <div class="container">
-      <h1>Hello, world!</h1>
+    <nav class="navbar bg-danger navbar-dark">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1 text-warning">Oratot</span>
+        </div>
+    </nav>
+    <p></p>
+    <div class="container bg-dark text-white rounded-5">
+      <h1 class="text-center text-warning">Benvenuti sul sito di Oratot!</h1>
 
 
 
